--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,11 +1,10 @@
 <%- include ('include/header'); -%>
 
 
-<h1><%= title %></h1>
-<p><%= content %></p>
-
-
-
+<% posts.forEach(post => { %> 
+    <h2><%= post.title %></h2>
+    <p><%= post.content.substring(0, 100) %>... <a href="/posts/<%= post.title %>">Read more</a></p>
+<% }) %>
 
 
 
